--- a/firebase.json
+++ b/firebase.json
@@ -1,15 +1,15 @@
 {
   "hosting": {
-    "site":"myaurapp",
-    "public": "dist",
-    "rewrites": [ {
-        "source": "**",
-        "destination": "/index.html"
-    } ],
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ]
+      "site":"dscviit2020",
+      "public": "dist",
+      "rewrites": [ {
+          "source": "**",
+          "destination": "/index.html"
+      } ],
+      "ignore": [
+          "firebase.json",
+          "**/.*",
+          "**/node_modules/**"
+      ]
   }
 }
